src/test/deca/context/invalid/class/instance/absent_type.deca
// Description:
//    Utilisation de instanceof
//
// Resultats:
//    undefined type A

{
	int a;
	if(a instanceof A) {}
}

